--- a/exercise/index.html
+++ b/exercise/index.html
@@ -159,5 +159,27 @@
         </article>
       </div>
     </section>
+    <section class="section-4">
+      <div><img src="icons/pic-2.png" alt="picture-2" /></div>
+      <div>
+        <h1>Curious to Learn More? <br />Stay Tuned</h1>
+        <p>
+          You let us know whenever you want us to update anything or
+          <br />think something can be optimized.
+        </p>
+        <div>
+          <div class="subscribe">
+            <img src="icons/email.png" alt="email-icon" />
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="johndoe@email.com"
+            />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
